Bug 420037 - "Size" column shows useless information when "Network" entry under "Remote" section is clicked
Summary: "Size" column shows useless information when "Network" entry under "Remote" s...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-13 14:21 UTC by Patrick Silva
Modified: 2021-01-16 13:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments
screenshot (106.16 KB, image/png)
2020-04-13 14:21 UTC, Patrick Silva
Details
size of "Add network folder" (90.66 KB, image/png)
2020-11-13 10:36 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-13 14:21:42 UTC
Created attachment 127512 [details]
screenshot

STEPS TO REPRODUCE
1. set details view mode
2. click on "Network" under "Remote" section of places panel
3. 

OBSERVED RESULT
"Size" column says "Unknown" and "0 B"

EXPECTED RESULT
"Size" information is pointless and can be omitted because the listed icons are not folders nor files.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 1 Bug Janitor Service 2020-11-05 07:54:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/93
Comment 2 Méven Car 2020-11-05 18:25:58 UTC
Git commit 61bf84c13d203840d4ffeb55ce92dc8b660871a1 by Méven Car.
Committed on 05/11/2020 at 07:50.
Pushed by elvisangelaccio into branch 'master'.

Details view: display empty text instead of unknown for sizeless dirs
Related: bug 420040
FIXED-IN: 20.12

M  +2    -6    src/kitemviews/kfileitemlistwidget.cpp

https://invent.kde.org/system/dolphin/commit/61bf84c13d203840d4ffeb55ce92dc8b660871a1
Comment 3 Patrick Silva 2020-11-13 10:36:59 UTC
Created attachment 133293 [details]
size of "Add network folder"

size of "Add network folder" is 0 B yet.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Comment 4 Patrick Silva 2021-01-16 13:24:40 UTC
"Add network folder" is no longer present in "Network" section since frameworks 5.78.(In reply to Patrick Silva from comment #3)
> Created attachment 133293 [details]
> size of "Add network folder"
> 
> size of "Add network folder" is 0 B yet.
> 
"Add network folder" is no longer present in "Network" section since frameworks 5.78.