Details view: display empty text instead of unknown for sizeless dirs

BUG: 420037
BUG: 420040
FIXED-IN: 20.12